исправление AdminControllerTest, покрытие тестами ProductService